--- a/css/estiloLogin.css
+++ b/css/estiloLogin.css
@@ -41,6 +41,11 @@ button:active{
     opacity: 0.8;
 }
 
+button:disabled{
+    pointer-events: none;
+    opacity: 0.7;
+}
+
 .clear{
     background-color: transparent;
     border: none;
